<resources>
    <string name="app_name">MyPlantDiary</string>
    <string name="date_planted">Date Planted</string>
    <string name="description">Description</string>
    <string name="event_type">Event Type</string>
    <string name="event_date">Event Date</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="plant_name">Plant name</string>
    <string name="quantity">Quantity</string>
    <string name="title_activity_maps">Map</string>
    <string name="units">Units (Gallons, Cups, etc.)</string>
    <string name="zero_point_zero">0.0</string>
</resources>
